--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -1,34 +1,15 @@
-name: 🌐 Render Keep Alive + Alert
+name: 🌐 Render Keep Alive
 
 on:
   schedule:
-    # Alle 10 Minuten
     - cron: "*/10 * * * *"
-  workflow_dispatch: # Manuell auslösbar
+  workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
       - name: 🔔 Ping Render Webhook
-        id: ping
         run: |
           echo "Pinge Render-Webservice an..."
-          STATUS=$(curl -s -o /dev/null -w "%{http_code}" https://weeztix-webhook.onrender.com/)
-          echo "Status: $STATUS"
-          if [ "$STATUS" -ne 200 ]; then
-            echo "failed=true" >> $GITHUB_OUTPUT
-          else
-            echo "failed=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: 🚨 Sende Pushover-Benachrichtigung bei Fehler
-        if: steps.ping.outputs.failed == 'true'
-        run: |
-          echo "Sende Pushover Alert..."
-          curl -s -X POST https://api.pushover.net/1/messages.json \
-            -d "token=${{ secrets.PUSHOVER_TOKEN }}" \
-            -d "user=${{ secrets.PUSHOVER_USER }}" \
-            -d "title=🚨 Render-Webhook Offline" \
-            -d "message=Der Webhook https://weeztix-webhook.onrender.com/ antwortet nicht (Status != 200)." \
-            -d "priority=1"
+          curl -s -o /dev/null -w "%{http_code}" https://weeztix-webhook.onrender.com/ || true
